work flow tested in geemap_test.ipynb

--- a/main.ipynb
+++ b/main.ipynb
@@ -35,6 +35,8 @@
    "outputs": [],
    "source": [
     "import ee\n",
+    "ee.Authenticate()\n",
+    "ee.Initialize()\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as pyplot\n"
