add Metrics block for main.ipynb

--- a/main.ipynb
+++ b/main.ipynb
@@ -16,7 +16,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Try init ee... 0 1 2 3 4 5 6 7 8 \n",
+      "Try init ee... 0 1 2 3 4 5 \n",
       "ee initialized!\n"
      ]
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,9 +139,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 4
+    }
+   ],
    "source": [
     "\n",
     "ckptPath = r\"./CKPT/ResNet101_GE17_1206/ckpt.pth\"\n",
@@ -167,7 +178,7 @@
     "ID5d = 1038\n",
     "\n",
     "dataPath = r\"E:\\SZT\\Data\\ff0105_ge01\"\n",
-    "exportAssetPath = \"users/thomasshen99/ForestPred_onlySure_1212\"\n",
+    "exportAssetPath = \"users/thomasshen99/ForestPred_CNNoriginal_1213\"\n",
     "exportNamePrefix = exportAssetPath.split('/')[-1]\n",
     "\n",
     "time_start = time.time()\n",
@@ -180,25 +191,213 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": null,
+   "execution_count": 5,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "\n",
+      "[Grid1038:Tile0] Sun Dec 13 19:19:31 2020\n",
+      "--------------------------------------------------------------------------------\n",
+      "data ready!\n",
+      "Generating samples for RF: \n",
+      "tile0 ID05d=0:: 100%|██████████| 100/100 [00:10<00:00,  9.14it/s]\n",
+      "tile0 ID05d=1:: 100%|██████████| 100/100 [00:09<00:00, 10.94it/s]\n",
+      "tile0 ID05d=2:: 100%|██████████| 100/100 [00:09<00:00, 10.99it/s]\n",
+      "tile0 ID05d=3:: 100%|██████████| 100/100 [00:09<00:00, 11.00it/s]\n",
+      "tile0 ID05d=4:: 100%|██████████| 100/100 [00:09<00:00, 11.03it/s]\n",
+      "tile0 ID05d=5:: 100%|██████████| 100/100 [00:09<00:00, 11.01it/s]\n",
+      "tile0 ID05d=6:: 100%|██████████| 100/100 [00:09<00:00, 11.00it/s]\n",
+      "tile0 ID05d=7:: 100%|██████████| 100/100 [00:09<00:00, 11.02it/s]\n",
+      "tile0 ID05d=8:: 100%|██████████| 100/100 [00:09<00:00, 11.01it/s]\n",
+      "tile0 ID05d=9:: 100%|██████████| 100/100 [00:09<00:00, 11.00it/s]\n",
+      "RF Training & predicting...\n",
+      "Predicting finished. Grid1038 tile0 exporting task started...\n",
+      "\n",
+      "\n",
+      "[Grid1038:Tile1] Sun Dec 13 19:23:47 2020\n",
+      "--------------------------------------------------------------------------------\n",
+      "data ready!\n",
+      "Generating samples for RF: \n",
+      "tile1 ID05d=10:: 100%|██████████| 100/100 [00:09<00:00, 11.02it/s]\n",
+      "tile1 ID05d=11:: 100%|██████████| 100/100 [00:09<00:00, 11.02it/s]\n",
+      "tile1 ID05d=12:: 100%|██████████| 100/100 [00:09<00:00, 11.01it/s]\n",
+      "tile1 ID05d=13:: 100%|██████████| 100/100 [00:09<00:00, 11.01it/s]\n",
+      "tile1 ID05d=14:: 100%|██████████| 100/100 [00:09<00:00, 10.98it/s]\n",
+      "tile1 ID05d=15:: 100%|██████████| 100/100 [00:09<00:00, 10.98it/s]\n",
+      "tile1 ID05d=16:: 100%|██████████| 100/100 [00:09<00:00, 11.00it/s]\n",
+      "tile1 ID05d=17:: 100%|██████████| 100/100 [00:09<00:00, 10.97it/s]\n",
+      "tile1 ID05d=18:: 100%|██████████| 100/100 [00:09<00:00, 10.95it/s]\n",
+      "tile1 ID05d=19:: 100%|██████████| 100/100 [00:09<00:00, 11.00it/s]\n",
+      "RF Training & predicting...\n",
+      "Predicting finished. Grid1038 tile1 exporting task started...\n",
+      "\n",
+      "\n",
+      "[Grid1038:Tile2] Sun Dec 13 19:27:34 2020\n",
+      "--------------------------------------------------------------------------------\n",
+      "data ready!\n",
+      "Generating samples for RF: \n",
+      "tile2 ID05d=20:: 100%|██████████| 100/100 [00:09<00:00, 10.99it/s]\n",
+      "tile2 ID05d=21:: 100%|██████████| 100/100 [00:09<00:00, 10.98it/s]\n",
+      "tile2 ID05d=22:: 100%|██████████| 100/100 [00:09<00:00, 11.01it/s]\n",
+      "tile2 ID05d=23:: 100%|██████████| 100/100 [00:09<00:00, 11.04it/s]\n",
+      "tile2 ID05d=24:: 100%|██████████| 100/100 [00:09<00:00, 11.02it/s]\n",
+      "tile2 ID05d=25:: 100%|██████████| 100/100 [00:09<00:00, 11.04it/s]\n",
+      "tile2 ID05d=26:: 100%|██████████| 100/100 [00:09<00:00, 11.04it/s]\n",
+      "tile2 ID05d=27:: 100%|██████████| 100/100 [00:09<00:00, 11.04it/s]\n",
+      "tile2 ID05d=28:: 100%|██████████| 100/100 [00:09<00:00, 11.03it/s]\n",
+      "tile2 ID05d=29:: 100%|██████████| 100/100 [00:09<00:00, 11.03it/s]\n",
+      "RF Training & predicting...\n",
+      "Predicting finished. Grid1038 tile2 exporting task started...\n",
+      "\n",
+      "\n",
+      "[Grid1038:Tile3] Sun Dec 13 19:32:10 2020\n",
+      "--------------------------------------------------------------------------------\n",
+      "data ready!\n",
+      "Generating samples for RF: \n",
+      "tile3 ID05d=30:: 100%|██████████| 100/100 [00:09<00:00, 11.03it/s]\n",
+      "tile3 ID05d=31:: 100%|██████████| 100/100 [00:09<00:00, 11.05it/s]\n",
+      "tile3 ID05d=32:: 100%|██████████| 100/100 [00:09<00:00, 11.02it/s]\n",
+      "tile3 ID05d=33:: 100%|██████████| 100/100 [00:09<00:00, 11.05it/s]\n",
+      "tile3 ID05d=34:: 100%|██████████| 100/100 [00:09<00:00, 11.04it/s]\n",
+      "tile3 ID05d=35:: 100%|██████████| 100/100 [00:09<00:00, 11.01it/s]\n",
+      "tile3 ID05d=36:: 100%|██████████| 100/100 [00:09<00:00, 11.03it/s]\n",
+      "tile3 ID05d=37:: 100%|██████████| 100/100 [00:09<00:00, 11.04it/s]\n",
+      "tile3 ID05d=38:: 100%|██████████| 100/100 [00:09<00:00, 11.01it/s]\n",
+      "tile3 ID05d=39:: 100%|██████████| 100/100 [00:09<00:00, 11.02it/s]\n",
+      "RF Training & predicting...\n",
+      "Predicting finished. Grid1038 tile3 exporting task started...\n",
+      "\n",
+      "\n",
+      "[Grid1038:Tile4] Sun Dec 13 19:36:09 2020\n",
+      "--------------------------------------------------------------------------------\n",
+      "data ready!\n",
+      "Generating samples for RF: \n",
+      "tile4 ID05d=40:: 100%|██████████| 100/100 [00:09<00:00, 11.02it/s]\n",
+      "tile4 ID05d=41:: 100%|██████████| 100/100 [00:09<00:00, 11.05it/s]\n",
+      "tile4 ID05d=42:: 100%|██████████| 100/100 [00:09<00:00, 11.03it/s]\n",
+      "tile4 ID05d=43:: 100%|██████████| 100/100 [00:09<00:00, 11.01it/s]\n",
+      "tile4 ID05d=44:: 100%|██████████| 100/100 [00:09<00:00, 11.03it/s]\n",
+      "tile4 ID05d=45:: 100%|██████████| 100/100 [00:09<00:00, 11.04it/s]\n",
+      "tile4 ID05d=46:: 100%|██████████| 100/100 [00:09<00:00, 11.04it/s]\n",
+      "tile4 ID05d=47:: 100%|██████████| 100/100 [00:09<00:00, 11.03it/s]\n",
+      "tile4 ID05d=48:: 100%|██████████| 100/100 [00:09<00:00, 11.01it/s]\n",
+      "tile4 ID05d=49:: 100%|██████████| 58/58 [00:05<00:00, 11.06it/s]\n",
+      "RF Training & predicting...\n",
+      "Predicting finished. Grid1038 tile4 exporting task started...\n",
+      "\n",
+      "\n",
+      "[Grid1038:Tile5] Sun Dec 13 19:39:53 2020\n",
+      "--------------------------------------------------------------------------------\n",
+      "data ready!\n",
+      "Generating samples for RF: \n",
+      "tile5 ID05d=50:: 100%|██████████| 100/100 [00:09<00:00, 11.01it/s]\n",
+      "tile5 ID05d=51:: 100%|██████████| 100/100 [00:09<00:00, 11.03it/s]\n",
+      "tile5 ID05d=52:: 100%|██████████| 100/100 [00:09<00:00, 11.03it/s]\n",
+      "tile5 ID05d=53:: 100%|██████████| 100/100 [00:09<00:00, 11.03it/s]\n",
+      "tile5 ID05d=54:: 100%|██████████| 100/100 [00:09<00:00, 11.03it/s]\n",
+      "tile5 ID05d=55:: 100%|██████████| 100/100 [00:09<00:00, 11.04it/s]\n",
+      "tile5 ID05d=56:: 100%|██████████| 100/100 [00:09<00:00, 11.02it/s]\n",
+      "tile5 ID05d=57:: 100%|██████████| 100/100 [00:09<00:00, 11.01it/s]\n",
+      "tile5 ID05d=58:: 100%|██████████| 100/100 [00:09<00:00, 11.04it/s]\n",
+      "tile5 ID05d=59:: 100%|██████████| 53/53 [00:04<00:00, 11.06it/s]\n",
+      "RF Training & predicting...\n",
+      "Predicting finished. Grid1038 tile5 exporting task started...\n",
+      "\n",
+      "\n",
+      "[Grid1038:Tile6] Sun Dec 13 19:44:03 2020\n",
+      "--------------------------------------------------------------------------------\n",
+      "data ready!\n",
+      "Generating samples for RF: \n",
+      "tile6 ID05d=60:: 100%|██████████| 100/100 [00:09<00:00, 11.02it/s]\n",
+      "tile6 ID05d=61:: 100%|██████████| 100/100 [00:09<00:00, 11.05it/s]\n",
+      "tile6 ID05d=62:: 100%|██████████| 100/100 [00:09<00:00, 11.04it/s]\n",
+      "tile6 ID05d=63:: 100%|██████████| 100/100 [00:09<00:00, 11.05it/s]\n",
+      "tile6 ID05d=64:: 100%|██████████| 100/100 [00:09<00:00, 11.04it/s]\n",
+      "tile6 ID05d=65:: 100%|██████████| 100/100 [00:09<00:00, 11.03it/s]\n",
+      "tile6 ID05d=66:: 100%|██████████| 100/100 [00:09<00:00, 11.03it/s]\n",
+      "tile6 ID05d=67:: 100%|██████████| 100/100 [00:09<00:00, 11.04it/s]\n",
+      "tile6 ID05d=68:: 100%|██████████| 100/100 [00:09<00:00, 11.05it/s]\n",
+      "tile6 ID05d=69:: 100%|██████████| 100/100 [00:09<00:00, 11.02it/s]\n",
+      "RF Training & predicting...\n",
+      "Predicting finished. Grid1038 tile6 exporting task started...\n",
+      "\n",
+      "\n",
+      "[Grid1038:Tile7] Sun Dec 13 19:48:03 2020\n",
+      "--------------------------------------------------------------------------------\n",
+      "data ready!\n",
+      "Generating samples for RF: \n",
+      "tile7 ID05d=70:: 100%|██████████| 100/100 [00:09<00:00, 11.02it/s]\n",
+      "tile7 ID05d=71:: 100%|██████████| 100/100 [00:09<00:00, 11.04it/s]\n",
+      "tile7 ID05d=72:: 100%|██████████| 100/100 [00:09<00:00, 11.01it/s]\n",
+      "tile7 ID05d=73:: 100%|██████████| 100/100 [00:09<00:00, 11.04it/s]\n",
+      "tile7 ID05d=74:: 100%|██████████| 100/100 [00:09<00:00, 11.01it/s]\n",
+      "tile7 ID05d=75:: 100%|██████████| 100/100 [00:09<00:00, 11.02it/s]\n",
+      "tile7 ID05d=76:: 100%|██████████| 100/100 [00:09<00:00, 11.04it/s]\n",
+      "tile7 ID05d=77:: 100%|██████████| 100/100 [00:09<00:00, 11.03it/s]\n",
+      "tile7 ID05d=78:: 100%|██████████| 100/100 [00:09<00:00, 11.03it/s]\n",
+      "tile7 ID05d=79:: 100%|██████████| 100/100 [00:09<00:00, 11.02it/s]\n",
+      "RF Training & predicting...\n",
+      "Predicting finished. Grid1038 tile7 exporting task started...\n",
+      "\n",
+      "\n",
+      "[Grid1038:Tile8] Sun Dec 13 19:52:07 2020\n",
+      "--------------------------------------------------------------------------------\n",
+      "data ready!\n",
+      "Generating samples for RF: \n",
+      "tile8 ID05d=80:: 100%|██████████| 100/100 [00:09<00:00, 11.02it/s]\n",
+      "tile8 ID05d=81:: 100%|██████████| 100/100 [00:09<00:00, 11.05it/s]\n",
+      "tile8 ID05d=82:: 100%|██████████| 100/100 [00:09<00:00, 11.01it/s]\n",
+      "tile8 ID05d=83:: 100%|██████████| 100/100 [00:09<00:00, 11.02it/s]\n",
+      "tile8 ID05d=84:: 100%|██████████| 100/100 [00:09<00:00, 11.00it/s]\n",
+      "tile8 ID05d=85:: 100%|██████████| 100/100 [00:09<00:00, 11.06it/s]\n",
+      "tile8 ID05d=86:: 100%|██████████| 100/100 [00:09<00:00, 11.02it/s]\n",
+      "tile8 ID05d=87:: 100%|██████████| 100/100 [00:09<00:00, 11.00it/s]\n",
+      "tile8 ID05d=88:: 100%|██████████| 100/100 [00:09<00:00, 11.04it/s]\n",
+      "tile8 ID05d=89:: 100%|██████████| 100/100 [00:09<00:00, 11.04it/s]\n",
+      "RF Training & predicting...\n",
+      "Predicting finished. Grid1038 tile8 exporting task started...\n",
+      "\n",
+      "\n",
+      "[Grid1038:Tile9] Sun Dec 13 19:56:24 2020\n",
+      "--------------------------------------------------------------------------------\n",
+      "data ready!\n",
+      "Generating samples for RF: \n",
+      "tile9 ID05d=90:: 100%|██████████| 100/100 [00:09<00:00, 11.02it/s]\n",
+      "tile9 ID05d=91:: 100%|██████████| 100/100 [00:09<00:00, 11.06it/s]\n",
+      "tile9 ID05d=92:: 100%|██████████| 100/100 [00:09<00:00, 11.02it/s]\n",
+      "tile9 ID05d=93:: 100%|██████████| 100/100 [00:09<00:00, 11.04it/s]\n",
+      "tile9 ID05d=94:: 100%|██████████| 100/100 [00:09<00:00, 11.02it/s]\n",
+      "tile9 ID05d=95:: 100%|██████████| 100/100 [00:09<00:00, 11.03it/s]\n",
+      "tile9 ID05d=96:: 100%|██████████| 100/100 [00:09<00:00, 11.02it/s]\n",
+      "tile9 ID05d=97:: 100%|██████████| 100/100 [00:09<00:00, 11.03it/s]\n",
+      "tile9 ID05d=98:: 100%|██████████| 100/100 [00:09<00:00, 11.04it/s]\n",
+      "tile9 ID05d=99:: 100%|██████████| 100/100 [00:09<00:00, 11.02it/s]\n",
+      "RF Training & predicting...\n",
+      "Predicting finished. Grid1038 tile9 exporting task started...\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# all_unsure_CNNpred, all_unsure_CNNpred_offseted = [], [] # 需要导出样本点为csv时使用\n",
+    "all_unsure_CNNpred, all_unsure_CNNpred_offseted = [], [] # 需要导出CNN预测样本点为csv时使用\n",
     "for tileNum in range(10):\n",
     "    # 1. 生成随机森林样本-------------------------------------------------------------------------------------------------------------------------------------------------------------------------\n",
     "    idList_05d = list(range(tileNum*10, (tileNum+1)*10, 1))\n",
     "    idList_01d = IDlist_01d[tileNum*10:(tileNum+1)*10]\n",
-    "\n",
     "    print(\"\\n[Grid%d:Tile%d] %s\" % (ID5d, tileNum, time.ctime()))\n",
     "    print(\"%s\" % \"-\"*80)\n",
+    "\n",
+    "    # if not all needed ge/ff01/ff05 are found, wait until all needs are satisfied\n",
     "    while(not common.checkExists_ffge(dataPath, ID5d, idList_05d, idList_01d)):\n",
     "        time.sleep(120)\n",
     "\n",
@@ -226,7 +425,7 @@
     "        # predict unsure area label with CNN\n",
     "        gePath_cur = dataPath_curGrid + \"/ge_%d_%d_%d.tif\" % (ID5d, ID05d, ID01d)\n",
     "        assert os.path.exists(gePath_cur), \"google earth image not found\"  \n",
-    "        llList_forest_sure, llList_forest_unsure, llList_forest_unsure_offseted = common.getRFSampleList(llList_sure_pos,llList_sure_neg, llList_unsure, model, gePath=gePath_cur, desc=\"tile%d ID05d=%d:\" % (tileNum, ID05d))\n",
+    "        llList_forest_sure, llList_forest_unsure, llList_forest_unsure_offseted = common.getRFSampleList(llList_sure_pos, llList_sure_neg, llList_unsure, model, gePath=gePath_cur, desc=\"tile%d ID05d=%d:\" % (tileNum, ID05d))\n",
     "\n",
     "        # append\n",
     "        llListFS_list.append(llList_forest_sure)\n",
@@ -243,11 +442,11 @@
     "    print(\"RF Training & predicting...\")\n",
     "    predForest_list = []\n",
     "    for idx, ID05d in enumerate(idList_05d):\n",
-    "        # ****在此设置使用的RF样本****        \n",
-    "        sample_train = common.getRFSampleFC(LC_STN, llListFS_list[idx] + llListFU_offseted_list[idx])\n",
-    "        # sample_train = common.getRFSampleFC(LC_STN, llListFS_list[idx] + llListFU_list[idx])\n",
+    "        # ****在此设置使用的RF样本****\n",
+    "        # sample_train = common.getRFSampleFC(LC_STN, llListFS_list[idx] + llListFU_offseted_list[idx])\n",
+    "        sample_train = common.getRFSampleFC(LC_STN, llListFS_list[idx] + llListFU_list[idx])\n",
     "\n",
-    "        classifier = ee.Classifier.smileRandomForest(numberOfTrees=200, variablesPerSplit=9, minLeafPopulation=1, bagFraction=0.5, maxNodes=None, seed=0).train(sample_train, \"forest\", selVar1)\n",
+    "        classifier = ee.Classifier.smileRandomForest(numberOfTrees=200, variablesPerSplit=9, minLeafPopulation=1, bagFraction=0.6, maxNodes=None, seed=0).train(sample_train, \"forest\", selVar1)\n",
     "        cur_geom05d = grid05d.filterMetadata(\"ID_05d\", \"equals\", ID05d).first().geometry()\n",
     "        predForest = LC_STN.clip(cur_geom05d).select(selVar1).classify(classifier)\n",
     "        predForest_list.append(predForest)\n",
@@ -262,7 +461,6 @@
     "    except Exception as e:\n",
     "        if str(e)[-10:]==\"not found.\":\n",
     "            ee.data.createAsset({\"type\":\"Folder\"}, opt_path=\"projects/earthengine-legacy/assets/%s\" % (exportAssetPath))\n",
-    "    # geemap.ee_export_image_to_drive(predTile.clip(exportRegion), exportName, folder=\"GEEexport\", region=exportRegion, scale=30, max_pixels=1.0E13, file_format='GeoTIFF')\n",
     "    task = ee.batch.Export.image.toAsset(predTile.clip(exportRegion), description=exportName, assetId=\"projects/earthengine-legacy/assets/%s/%s\" % (exportAssetPath, exportName), pyramidingPolicy={\"forest\":\"mode\"}, region=exportRegion, scale=30, maxPixels=1e13)\n",
     "    task.start()\n",
     "    print(\"Predicting finished. Grid%d tile%d exporting task started...\\n\" % (ID5d, tileNum))"
@@ -304,24 +502,8 @@
     "metricsDictList = ee.List(productNameList).map(utils.getCalcMetricsFunc(valPoints_cur_sampled, areaDict))\n",
     "metricsFC = ee.FeatureCollection(metricsDictList.map(lambda x:ee.Feature(None, x)))\n",
     "\n",
-    "# geemap.ee_export_vector(metricsFC, \"./foo.csv\")"
+    "geemap.ee_export_vector(metricsFC, \"./foo.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mDL = metricsDictList.getInfo()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "source": [
